--- a/exo7/style/style.css
+++ b/exo7/style/style.css
@@ -1,17 +1,11 @@
-#color_1 {
+#identity {
 	background-color: #2574A9;
-	height: 120px;
-	margin-bottom: 15px;
 }
 
-#color_2 {
+#delivery {
 	background-color: #9A12B3;
-	height: 185px;
-	margin-bottom: 15px;
 }
 
-#color_3 {
+#payment {
 	background-color: #DB0A5B;
-	height: 175px;
-	margin-bottom: 15px;
 }
